--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,16 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "tcg/voyager": "^1.1"
+        "tcg/voyager": "^1.1",
+        "orangehill/iseed": "dev-master"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "xethron/migrations-generator": "^2.0"
     },
     "autoload": {
         "classmap": [
